<resources>
    <string name="app_name">GPSTracker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="start_work">Start work</string>
    <string name="end_work">End Work</string>
    <string name="go_to_break">go to break</string>
    <string name="end_break">end break</string>
    <string name="cant_log_in">Can not log in</string>
</resources>
