<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="pl.wsb.szmibartolo.bartosz.gpstracker.viewmodels.MainViewModel" />
        <import type="pl.wsb.szmibartolo.bartosz.gpstracker.bindings.MyBindings"/>
    </data>

    <android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="pl.wsb.szmibartolo.bartosz.gpstracker.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/content_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="pl.wsb.szmibartolo.bartosz.gpstracker.MainActivity"
            tools:showIn="@layout/activity_main">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.isVisibleStartWorkButton}"
                android:onClick="@{viewModel.onStartWorkButtonClick}"
                android:text="@string/start_work" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.isVisibleEndWorkButton}"
                android:onClick="@{viewModel.onEndWorkButtonClick}"
                android:text="@string/end_work" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.isVisibleStartBreakButton}"
                android:onClick="@{viewModel.onStartBreakButtonClick}"
                android:text="@string/go_to_break" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.isVisibleEndBreakButton}"
                android:onClick="@{viewModel.onEndBreakButtonClick}"
                android:text="@string/end_break" />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>